ghci.log
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/kana/bprog2022/.ghci
2022-05-19 15:41:27.6007665
>>> 12 + 12
24
2022-05-19 15:54:29.0325321
>>> 3 + 3 * 3
12
2022-05-19 15:55:13.9892169
>>> 10 - 5
5
2022-05-19 15:55:44.1251124
>>> sqrt 2
1.4142135623730951
2022-05-19 15:59:45.3777276
>>> double 3

<interactive>:5:1: error: Variable not in scope: double :: t0 -> t
2022-05-19 16:02:36.3574381
>>> GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/kana/bprog2022/.ghci
2022-05-26 15:02:11.1368592
>>> maxBound :: Int
9223372036854775807
2022-05-26 15:03:46.1833799
>>> 2 ^ 63 - 1
9223372036854775807
2022-05-26 15:05:04.3585976
>>> minBound :: Int
-9223372036854775808
2022-05-26 15:05:37.4911008
>>> :e src/First.hs
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
Ok, no modules loaded.
2022-05-26 15:49:04.6585086
>>> :l src/First.hs
[1 of 1] Compiling First            ( src/First.hs, interpreted )
Ok, one module loaded.
2022-05-26 15:49:04.6976001
>>> double 3
6
2022-05-26 15:56:27.2545128
>>> double (1 + 3)
8
2022-05-26 15:57:07.5985262
>>> GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/kana/bprog2022/.ghci
2022-06-09 14:55:11.3281123
>>> 2 + 3 * 4
14
2022-06-09 14:57:45.6838385
>>> (2 + 3) * 4
20
2022-06-09 15:00:14.2751592
>>> :i sqrt
type Floating :: * -> Constraint
class Fractional a => Floating a where
  ...
  sqrt :: a -> a
  ...
  	-- Defined in ‘GHC.Float’
2022-06-09 15:00:51.2433925
>>> sqrt (3 ^ 2 + 4 ^ 2)
5.0
2022-06-09 15:05:16.4252154
>>> sqrt (25 :: Int)

<interactive>:5:1: error:
    • No instance for (Floating Int) arising from a use of ‘sqrt’
    • In the expression: sqrt (25 :: Int)
      In an equation for ‘it’: it = sqrt (25 :: Int)
2022-06-09 15:08:18.130697
>>> sqrt (25 :: Double)
5.0
2022-06-09 15:09:25.5733071
>>> sqrt 25
5.0
2022-06-09 15:10:14.323501
>>> hoge 25 :: Int

<interactive>:8:1: error: Variable not in scope: hoge :: t0 -> Int
2022-06-09 15:14:02.4651384
>>> head [1, 2, ]3

<interactive>:9:13: error: parse error on input ‘]’
2022-06-09 15:46:39.3616329
>>> head [1, 2, 3]
1
2022-06-09 15:47:19.7710834
>>> head [3, 1, 4, 1, 5]
3
2022-06-09 15:47:50.8178274
>>> head []
*** Exception: Prelude.head: empty list
2022-06-09 15:49:39.6134905
>>> hoge = [3, 1, 4, 1, 5] :: [Int]
2022-06-09 15:50:39.5965105
>>> hoge
[3,1,4,1,5]
2022-06-09 15:50:56.2632412
>>> head hoge
3
2022-06-09 15:51:26.1829825
>>> tail hoge
[1,4,1,5]
2022-06-09 15:51:47.6824765
>>> tail []
*** Exception: Prelude.tail: empty list
2022-06-09 15:52:34.6334579
>>> hoge !! 0
3
2022-06-09 15:55:08.0974355
>>> hoge 2 !!

<interactive>:19:10: error:
    parse error (possibly incorrect indentation or mismatched brackets)
2022-06-09 15:55:17.8053259
>>> hoge 2 !! hoge

<interactive>:20:1: error:
    • Couldn't match expected type: t0 -> [a]
                  with actual type: [Int]
    • The function ‘hoge’ is applied to one value argument,
        but its type ‘[Int]’ has none
      In the first argument of ‘(!!)’, namely ‘hoge 2’
      In the expression: hoge 2 !! hoge
    • Relevant bindings include it :: a (bound at <interactive>:20:1)

<interactive>:20:11: error:
    • Couldn't match expected type ‘Int’ with actual type ‘[Int]’
    • In the second argument of ‘(!!)’, namely ‘hoge’
      In the expression: hoge 2 !! hoge
      In an equation for ‘it’: it = hoge 2 !! hoge
2022-06-09 15:55:50.301254
>>> hoge !! 2
4
2022-06-09 15:56:23.9187403
>>> take 3 hoge
[3,1,4]
2022-06-09 15:56:56.1187203
>>> hoge
[3,1,4,1,5]
2022-06-09 15:57:02.05112
>>> drop 3 hoge
[1,5]
2022-06-09 15:57:24.6415805
>>> hoge 5 hoge

<interactive>:25:1: error:
    • Couldn't match expected type: t0 -> [Int] -> t
                  with actual type: [Int]
    • The function ‘hoge’ is applied to two value arguments,
        but its type ‘[Int]’ has none
      In the expression: hoge 5 hoge
      In an equation for ‘it’: it = hoge 5 hoge
    • Relevant bindings include it :: t (bound at <interactive>:25:1)
2022-06-09 15:58:25.8748779
>>> hoge !! 5
*** Exception: Prelude.!!: index too large
2022-06-09 15:59:02.5434579
>>> take 10 hoge
[3,1,4,1,5]
2022-06-09 15:59:24.2852163
>>> drop 10 hoge
[]
2022-06-09 16:00:31.1747048
>>> length hoge
5
2022-06-09 16:01:10.7366881
>>> length []
0
2022-06-09 16:01:25.3763471
>>> sum hoge
14
2022-06-09 16:02:04.1351227
>>> product hoge
60
2022-06-09 16:03:05.397948
>>> hoge ++ hoge
[3,1,4,1,5,3,1,4,1,5]
2022-06-09 16:04:56.068315
>>> reverse hoge
[5,1,4,1,3]
2022-06-09 16:05:43.9034984
>>> : load src/First.hs

<interactive>:1:1: error: Not in scope: ‘load’
2022-06-09 16:07:54.9346354
>>> :e src/First.hs
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
Ok, no modules loaded.
2022-06-09 16:08:57.9147043
>>> :load src/First.hs
[1 of 1] Compiling First            ( src/First.hs, interpreted )
Ok, one module loaded.
2022-06-09 16:08:57.9545302
>>> double 3 + 3
9
2022-06-09 16:10:21.5115572
>>> double (3 + 3)
12
2022-06-09 16:11:31.1261993
>>> :e
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
   5  quadruple :: Int -> Int
   6  quadruple x = double (double x)
[1 of 1] Compiling First            ( src/First.hs, interpreted )
Ok, one module loaded.
2022-06-09 16:14:38.8388016
>>> quadruple 2
8
2022-06-09 16:15:00.2624828
>>> :quit
Leaving GHCi.
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/kana/bprog2022/.ghci
2022-06-16 15:02:05.7686262
>>> take 3 [3,1,4,1,5]
[3,1,4]
2022-06-16 15:04:23.1806909
>>> :e src/First.hs
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
   5  
   6  quadruple :: Int -> Int
   7  quadruple x = double (double x)
Ok, no modules loaded.
2022-06-16 15:10:49.7838185
>>> :l src/First.hs
[1 of 1] Compiling First            ( src/First.hs, interpreted )
Ok, one module loaded.
2022-06-16 15:10:49.823746
>>> double

<interactive>:4:1: error:
    • No instance for (Show (Int -> Int)) arising from a use of ‘print’
        (maybe you haven't applied a function to enough arguments?)
    • In a stmt of an interactive GHCi command: print it
2022-06-16 15:12:56.3044829
>>> take (double 2) [1,2,3,4,5]
[1,2,3,4]
2022-06-16 15:15:19.6138379
>>> [1 ..10]
[1,2,3,4,5,6,7,8,9,10]
2022-06-16 15:20:42.2897737
>>> :e
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
   5  
   6  quadruple :: Int -> Int
   7  quadruple x = double (double x)
   8  
   9  factorial :: Integer -> Integer
  10  factorial n = product [1 .. n]
[1 of 1] Compiling First            ( src/First.hs, interpreted )
Ok, one module loaded.
2022-06-16 15:21:05.0723271
>>> factorial 3
6
2022-06-16 15:22:35.6531735
>>> factorial 4
24
2022-06-16 15:25:01.9224215
>>> :r]
unknown command ':r]'
use :? for help.
2022-06-16 15:38:25.7989296
>>> :e
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
   5  
   6  quadruple :: Int -> Int
   7  quadruple x = double (double x)
   8  
   9  factorial :: Integer -> Integer
  10  factorial n = product [1 .. n]
  11  
  12  average :: [Int] -> Int
  13  average xs = sum xs 'div' length xs
  14  
  15  ave :: [Int] -> Int
  16  ave xs = div (sum xs) (length xs)
[1 of 1] Compiling First            ( src/First.hs, interpreted )

src/First.hs:13:21: error:
    • Syntax error on 'div'
      Perhaps you intended to use TemplateHaskell or TemplateHaskellQuotes
    • In the Template Haskell quotation 'div'
   |
13 | average xs = sum xs 'div' length xs
   |                     ^^^^^
Failed, no modules loaded.
2022-06-16 15:38:50.7097228
>>> :e
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
   5  
   6  quadruple :: Int -> Int
   7  quadruple x = double (double x)
   8  
   9  factorial :: Integer -> Integer
  10  factorial n = product [1 .. n]
  11  
  12  average :: [Int] -> Int
  13  average xs = sum xs `div`` length xs
  14  
  15  ave :: [Int] -> Int
  16  ave xs = div (sum xs) (length xs)
[1 of 1] Compiling First            ( src/First.hs, interpreted )

src/First.hs:13:26: error: parse error on input ‘`’
   |
13 | average xs = sum xs `div`` length xs
   |                          ^
Failed, no modules loaded.
2022-06-16 15:39:35.6588949
>>> :e
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
   5  
   6  quadruple :: Int -> Int
   7  quadruple x = double (double x)
   8  
   9  factorial :: Integer -> Integer
  10  factorial n = product [1 .. n]
  11  
  12  average :: [Int] -> Int
  13  average xs = sum xs `div` length xs
  14  
  15  ave :: [Int] -> Int
  16  ave xs = div (sum xs) (length xs)
[1 of 1] Compiling First            ( src/First.hs, interpreted )
Ok, one module loaded.
2022-06-16 15:39:46.5402873
>>> average [1,2,3,4,5]
3
2022-06-16 15:40:24.9456401
>>> :t take 3 [1,2,3,4,5]
take 3 [1,2,3,4,5] :: Num a => [a]
2022-06-16 15:49:53.9786574
>>> 
2022-06-16 16:06:24.0972911
>>>  init [1 .. 5]
[1,2,3,4]
2022-06-16 16:07:17.6699319
>>> :e
   1  module First where
   2  
   3  double :: Int -> Int
   4  double x = x + x
   5  
   6  quadruple :: Int -> Int
   7  quadruple x = double (double x)
   8  
   9  factorial :: Integer -> Integer
  10  factorial n = product [1 .. n]
  11  
  12  average :: [Int] -> Int
  13  average xs = sum xs `div` length xs
  14  
  15  ave :: [Int] -> Int
  16  ave xs = div (sum xs) (length xs)
  17  
  18  myinit :: [a] -> [a]
  19  myinit (x:[]) = []
  20  myinit (x:xs) = x : (init xs)
[1 of 1] Compiling First            ( src/First.hs, interpreted )
Ok, one module loaded.
2022-06-16 16:14:28.8385264
>>> myinit [1 .. 5]
[1,2,3,4]
2022-06-16 16:14:55.3041717
>>> myinit []
*** Exception: src/First.hs:(19,1)-(20,29): Non-exhaustive patterns in function myinit

2022-06-16 16:15:09.9385205
>>> :q
Leaving GHCi.
